fix alignment of price in the cart list

--- a/jekyll/_assets/css/2-modules/cart.sass
+++ b/jekyll/_assets/css/2-modules/cart.sass
@@ -39,8 +39,13 @@ checkout
           &:hover
             color: $secondary-color
 
+        .item-title
+          flex: 1
+          text-align: center
+
         .price
           font-size: 2em
+          padding: 0 0.5em
 
         .remove-button
           background: transparent
